# django-docketsearch

./: .gitignore  MANIFEST.in  Pipfile  Readme.md  manage.py  setup.cfg  setup.py
django_docketsearch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docketsearch/: settings.py  urls.py  wsgi.py
tests/: conftest.py  test_services.py  test_settings.py  test_views.py
ujs_search/: apps.py  appsettings.py  serializers.py  urls.py  views.py
ujs_search/reference/: county_lookup.csv
ujs_search/services/searchujs/: CPSearch.py  MDJSearch.py  SearchResult.py  UJSSearch.py  UJSSearchFactory.py  __init__.py  by_docket.py  by_name.py
