[metadata]
name = django-docketsearch
version = 0.0.2
description = Django Rest API app for searching for public records on the PA UJS portal
long_description = file: Readme.md
author = Nate Vogel
license = MIT
classifiers =
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7

[options]
include_package_data = true
packages = find: